Switch admin panel to use Supabase directly
- Modified makeAPICall to use Supabase directly for all operations
- Removed backend fallback since we're using Supabase as primary database
- This ensures consistent data source and fixes author editing issues

The Supabase database already contains the author data, so this should resolve the empty form issue when editing authors.

--- a/secret.html
+++ b/secret.html
@@ -941,54 +941,22 @@
             async makeAPICall(endpoint, method = 'GET', data = null) {
                 console.log(`🌐 API Call: ${method} ${this.apiBase}${endpoint}`);
 
-                // Try backend first, then fallback to Supabase if it fails
-                const options = {
-                    method: method,
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Cache-Control': 'no-cache, no-store, must-revalidate',
-                        'Pragma': 'no-cache',
-                        'Expires': '0'
-                    }
-                };
-
-                if (data) {
-                    options.body = JSON.stringify(data);
-                    console.log('📤 Request data:', data);
+                // Use Supabase directly for all operations
+                if (endpoint.startsWith('/articles')) {
+                    return this.handleArticleOperation(endpoint, method, data);
+                }
+                if (endpoint.startsWith('/authors')) {
+                    return this.handleAuthorOperation(endpoint, method, data);
+                }
+                if (endpoint.startsWith('/categories')) {
+                    return this.handleCategoryOperation(endpoint, method, data);
+                }
+                if (endpoint.startsWith('/gallery')) {
+                    return this.handleGalleryOperation(endpoint, method, data);
                 }
 
-                try {
-                    console.log('🔄 Trying backend first...');
-                    const response = await fetch(`${this.apiBase}${endpoint}`, options);
-                    const result = await response.json();
-
-                    console.log(`📥 Backend Response (${response.status}):`, result);
-
-                    if (!response.ok) {
-                        throw new Error(`Backend error: ${response.status}`);
-                    }
-
-                    return result;
-                } catch (error) {
-                    console.warn('⚠️ Backend failed, trying Supabase fallback:', error.message);
-
-                    // Fallback to Supabase for specific operations
-                    if (endpoint.startsWith('/articles')) {
-                        return this.handleArticleOperation(endpoint, method, data);
-                    }
-                    if (endpoint.startsWith('/authors')) {
-                        return this.handleAuthorOperation(endpoint, method, data);
-                    }
-                    if (endpoint.startsWith('/categories')) {
-                        return this.handleCategoryOperation(endpoint, method, data);
-                    }
-                    if (endpoint.startsWith('/gallery')) {
-                        return this.handleGalleryOperation(endpoint, method, data);
-                    }
-
-                    // If no Supabase fallback available, throw the original error
-                    throw error;
-                }
+                // For other endpoints, throw error since we're using Supabase only
+                throw new Error(`Unsupported endpoint: ${endpoint}`);
 
 
             }
