Add complete CRUD operations for authors in Supabase
- Added updateAuthorInSupabase function to handle author edits
- Added createAuthorInSupabase function for new author creation
- Added deleteAuthorFromSupabase function for author deletion
- Enhanced handleAuthorOperation to support PUT/PATCH, POST, and DELETE methods
- Added proper data transformation for isActive boolean field
- Added comprehensive error handling and logging

This fixes the issue where author edits weren't being saved to Supabase.

--- a/secret.html
+++ b/secret.html
@@ -1279,6 +1279,132 @@
                 }
             }
 
+            async updateAuthorInSupabase(authorId, authorData) {
+                try {
+                    console.log(`🔄 Updating author ${authorId} in Supabase:`, authorData);
+
+                    const supabaseData = {
+                        name: authorData.name,
+                        email: authorData.email,
+                        bio: authorData.bio,
+                        avatarUrl: authorData.avatarUrl,
+                        isActive: authorData.isActive === 'true' || authorData.isActive === true,
+                        updatedAt: new Date().toISOString()
+                    };
+
+                    const response = await fetch(`${this.supabaseUrl}/rest/v1/authors?id=eq.${authorId}`, {
+                        method: 'PATCH',
+                        headers: {
+                            'apikey': this.supabaseAnonKey,
+                            'Authorization': `Bearer ${this.supabaseAnonKey}`,
+                            'Content-Type': 'application/json',
+                            'Prefer': 'return=representation'
+                        },
+                        body: JSON.stringify(supabaseData)
+                    });
+
+                    if (!response.ok) {
+                        const error = await response.text();
+                        throw new Error(`Supabase update failed: ${response.status} - ${error}`);
+                    }
+
+                    const result = await response.json();
+                    console.log(`✅ Author ${authorId} updated in Supabase:`, result);
+
+                    return {
+                        success: true,
+                        data: result[0] || result
+                    };
+                } catch (error) {
+                    console.error(`❌ Failed to update author ${authorId} in Supabase:`, error);
+                    return {
+                        success: false,
+                        error: { message: error.message }
+                    };
+                }
+            }
+
+            async createAuthorInSupabase(authorData) {
+                try {
+                    console.log('🔄 Creating author in Supabase:', authorData);
+
+                    const id = 'author-' + Date.now();
+                    const supabaseData = {
+                        id: id,
+                        name: authorData.name,
+                        email: authorData.email,
+                        bio: authorData.bio,
+                        avatarUrl: authorData.avatarUrl,
+                        isActive: authorData.isActive === 'true' || authorData.isActive === true,
+                        createdAt: new Date().toISOString(),
+                        updatedAt: new Date().toISOString()
+                    };
+
+                    const response = await fetch(`${this.supabaseUrl}/rest/v1/authors`, {
+                        method: 'POST',
+                        headers: {
+                            'apikey': this.supabaseAnonKey,
+                            'Authorization': `Bearer ${this.supabaseAnonKey}`,
+                            'Content-Type': 'application/json',
+                            'Prefer': 'return=representation'
+                        },
+                        body: JSON.stringify(supabaseData)
+                    });
+
+                    if (!response.ok) {
+                        const error = await response.text();
+                        throw new Error(`Supabase create failed: ${response.status} - ${error}`);
+                    }
+
+                    const result = await response.json();
+                    console.log('✅ Author created in Supabase:', result);
+
+                    return {
+                        success: true,
+                        data: result[0] || result
+                    };
+                } catch (error) {
+                    console.error('❌ Failed to create author in Supabase:', error);
+                    return {
+                        success: false,
+                        error: { message: error.message }
+                    };
+                }
+            }
+
+            async deleteAuthorFromSupabase(authorId) {
+                try {
+                    console.log(`🔄 Deleting author ${authorId} from Supabase`);
+
+                    const response = await fetch(`${this.supabaseUrl}/rest/v1/authors?id=eq.${authorId}`, {
+                        method: 'DELETE',
+                        headers: {
+                            'apikey': this.supabaseAnonKey,
+                            'Authorization': `Bearer ${this.supabaseAnonKey}`,
+                            'Content-Type': 'application/json'
+                        }
+                    });
+
+                    if (!response.ok) {
+                        const error = await response.text();
+                        throw new Error(`Supabase delete failed: ${response.status} - ${error}`);
+                    }
+
+                    console.log(`✅ Author ${authorId} deleted from Supabase`);
+
+                    return {
+                        success: true,
+                        data: { message: 'Author deleted successfully' }
+                    };
+                } catch (error) {
+                    console.error(`❌ Failed to delete author ${authorId} from Supabase:`, error);
+                    return {
+                        success: false,
+                        error: { message: error.message }
+                    };
+                }
+            }
+
             async getCategoriesFromSupabase() {
                 try {
                     console.log('🔄 Fetching categories from Supabase...');
@@ -1327,13 +1453,26 @@
                             const authorId = endpoint.split('/')[2];
                             return await this.getAuthorFromSupabase(authorId);
                         }
+                    } else if (method === 'PUT' || method === 'PATCH') {
+                        if (endpoint.match(/^\/authors\/[a-zA-Z0-9]+$/)) {
+                            // Update author request like PUT /authors/{id}
+                            const authorId = endpoint.split('/')[2];
+                            return await this.updateAuthorInSupabase(authorId, data);
+                        }
+                    } else if (method === 'POST') {
+                        if (endpoint === '/authors') {
+                            // Create new author
+                            return await this.createAuthorInSupabase(data);
+                        }
+                    } else if (method === 'DELETE') {
+                        if (endpoint.match(/^\/authors\/[a-zA-Z0-9]+$/)) {
+                            // Delete author request like DELETE /authors/{id}
+                            const authorId = endpoint.split('/')[2];
+                            return await this.deleteAuthorFromSupabase(authorId);
+                        }
                     }
 
-                    // For now, return success for other author operations
-                    return {
-                        success: true,
-                        data: { message: 'Author operation completed' }
-                    };
+                    throw new Error(`Unsupported author operation: ${method} ${endpoint}`);
                 } catch (error) {
                     console.error('❌ Supabase author operation failed:', error);
                     return {
