Add comprehensive debugging for author save operations
- Added detailed logging to saveAuthor function to track form data collection
- Added debugging to updateAuthorInSupabase to monitor Supabase API calls
- Added logging for request/response data and status codes
- Added URL and payload logging for troubleshooting

This will help identify exactly where the author save process is failing.

--- a/secret.html
+++ b/secret.html
@@ -1292,6 +1292,9 @@
                         updatedAt: new Date().toISOString()
                     };
 
+                    console.log(`📦 Supabase data to send:`, supabaseData);
+                    console.log(`🌐 Supabase URL: ${this.supabaseUrl}/rest/v1/authors?id=eq.${authorId}`);
+
                     const response = await fetch(`${this.supabaseUrl}/rest/v1/authors?id=eq.${authorId}`, {
                         method: 'PATCH',
                         headers: {
@@ -1303,8 +1306,11 @@
                         body: JSON.stringify(supabaseData)
                     });
 
+                    console.log(`📥 Supabase response status: ${response.status}`);
+
                     if (!response.ok) {
                         const error = await response.text();
+                        console.error(`❌ Supabase error response:`, error);
                         throw new Error(`Supabase update failed: ${response.status} - ${error}`);
                     }
 
@@ -3059,12 +3065,24 @@
                         isActive: formData.get('isActive') === 'true'
                     };
 
+                    console.log('📋 Form data collected:', {
+                        name: formData.get('name'),
+                        email: formData.get('email'),
+                        bio: formData.get('bio'),
+                        avatarUrl: formData.get('avatarUrl'),
+                        isActive: formData.get('isActive')
+                    });
+                    console.log('📦 Author data to send:', authorData);
+                    console.log('✏️ Current editing author:', this.currentEditingAuthor);
+
                     let response;
                     if (this.currentEditingAuthor) {
                         // Update existing author
+                        console.log(`🔄 Updating author ${this.currentEditingAuthor.id} with data:`, authorData);
                         response = await this.makeAPICall(`/authors/${this.currentEditingAuthor.id}`, 'PUT', authorData);
                     } else {
                         // Create new author
+                        console.log('🆕 Creating new author with data:', authorData);
                         response = await this.makeAPICall('/authors', 'POST', authorData);
                     }
 
