--- a/nyegaman.html
+++ b/nyegaman.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - Onward Dominicans (Production)</title>
+    <title>Nyegaman Dashboard - Onward Dominicans (Production)</title>
     <link rel="stylesheet" href="./src/index.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
